crates/tla-core/src/diagnostic/snapshots/tla_core__diagnostic__tests__snapshot_parse_error.snap
---
source: crates/tla-core/src/diagnostic/tests.rs
assertion_line: 117
expression: "render_to_string(&d, \"test.tla\", source)"
---
Error: syntax error: expected identifier, found '=='
   ╭─[test.tla:2:12]
   │
 2 │ VARIABLE x == 1
   │            ─┬  
   │             ╰── here
───╯
